iac/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idea-backlog
  labels:
    name: idea-backlog
